Buffer zone (only when creating a new territory